Bug 1016063 - Don't include the fake classnames XUL tree pseudo-elements have when calculating style rule specificity. r=heycam, a=lsblakk